--- a/dashboard/src/App.css
+++ b/dashboard/src/App.css
@@ -31,9 +31,9 @@
 /* color-picker style  */
 
  #preview {
-  background: transparent
+  /* background: transparent
     url('https://ej2.syncfusion.com/react/demos/src/color-picker/images/pen.png')
-    no-repeat;
+    no-repeat; */
   display: inline-block;
   height: 80px;
   margin: 10px 0;
